--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1227,8 +1227,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 194,
    "id": "4c015f31-2fcc-49e1-bac4-5a8f4c6983f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Program to demonstrate parser module in Python\n",
+      "\n",
+      "\n",
+      "The given expression for parsing is as follows:\n",
+      "5 + 8\n",
+      "\n",
+      "\n",
+      "Parsing of given expression results as: \n",
+      "<parser.st object at 0x000001F5C455D210>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-194-b61e844d1091>:1: DeprecationWarning: The parser module is deprecated and will be removed in future versions of Python\n",
+      "  import parser\n"
+     ]
+    }
+   ],
+   "source": [
+    "import parser\n",
+    "print(\"Program to demonstrate parser module in Python\")\n",
+    "print(\"\\n\")\n",
+    "exp = \"5 + 8\"\n",
+    "print(\"The given expression for parsing is as follows:\")\n",
+    "print(exp)\n",
+    "print(\"\\n\")\n",
+    "print(\"Parsing of given expression results as: \")\n",
+    "st = parser.expr(exp)\n",
+    "print(st)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec92a994-8e8d-4500-9f61-34c3ff1e2e1c",
    "metadata": {},
    "outputs": [],
    "source": []
