--- a/parser.ipynb
+++ b/parser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c8dd7a2d-fcb8-4eee-97ea-e44573966422",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "8e4ec136-b74c-4f90-849b-23e0a925f90e",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,7 @@
      "output_type": "stream",
      "text": [
       "240\n",
-      "Wall time: 0 ns\n"
+      "Wall time: 9.23 ms\n"
      ]
     }
    ],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 91,
    "id": "96e49673-f402-4fc9-8c14-b62d1a4e1f60",
    "metadata": {},
    "outputs": [
@@ -42,144 +42,73 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "House 1\n",
-      "\n",
-      "37\n",
-      "0.Aggregate, 1.Fridge, 2.Chest Freezer, 3.Upright Freezer, 4.Tumble Dryer,\n",
-      "\n",
-      "['0', ' 1', ' 2', ' 3', ' 4', '\\n']\n",
-      "House 2\n",
-      "\n",
-      "45\n",
-      "0.Aggregate, 1.Fridge-Freezer, 2.Washing Machine, 3.Dishwasher, 4.Television,\n",
-      "\n",
-      "['0', ' 1', ' 2', ' 3', ' 4', '\\n']\n",
-      "House 3\n",
-      "\n",
-      "50\n",
-      "0.Aggregate, 1.Toaster, 2.Fridge-Freezer, 3.Freezer, 4.Tumble Dryer,\n",
-      "\n",
-      "['0', ' 1', ' 2', ' 3', ' 4', '\\n']\n",
-      "House 4\n",
-      "\n",
-      "55\n",
-      "0.Aggregate, 1.Fridge, 2.Freezer, 3.Fridge-Freezer, 4.Washing Machine (1),\n",
-      "\n",
-      "['0', ' 1', ' 2', ' 3', ' 4', '\\n']\n",
-      "House 5\n",
-      "\n",
-      "70\n",
-      "0.Aggregate, 1.Fridge-Freezer, 2.Tumble Dryer 3.Washing Machine, 4.Dishwasher,\n",
-      "\n",
-      "['0', ' 1', ' 2', ' 4', '\\n']\n",
-      "House 6\n",
-      "\n",
-      "84\n",
-      "0.Aggregate, 1.Freezer (Utility Room), 2.Washing Machine, 3.Dishwasher, 4.MJY Computer,\n",
-      "\n",
-      "['0', ' 1', ' 2', ' 3', ' 4', '\\n']\n",
-      "House 7\n",
-      "\n",
-      "101\n",
-      "0.Aggregate, 1.Fridge, 2.Freezer (Garage), 3.Freezer, 4.Tumble Dryer,\n",
-      "\n",
-      "['0', ' 1', ' 2', ' 3', ' 4', '\\n']\n",
-      "House 8\n",
-      "\n",
-      "111\n",
-      "0.Aggregate, 1.Fridge, 2.Freezer, 3.Dryer, 4.Washing Machine,\n",
-      "\n",
-      "['0', ' 1', ' 2', ' 3', ' 4', '\\n']\n",
-      "House 9\n",
-      "\n",
-      "123\n",
-      "0.Aggregate, 1.Fridge-Freezer, 2.Washer Dryer, 3.Washing Machine, 4.Dishwasher,\n",
-      "\n",
-      "['0', ' 1', ' 2', ' 3', ' 4', '\\n']\n",
-      "House 10\n",
-      "\n",
-      "131\n",
-      "0.Aggregate, 1.Magimix (Blender), 2.Freezer, 3.Chest Freezer (In Garage), 4.Fridge-Freezer,\n",
-      "\n",
-      "['0', ' 1', ' 2', ' 3', ' 4', '\\n']\n",
-      "House 11\n",
-      "\n",
-      "146\n",
-      "0.Aggregate, 1.Fridge, 2.Fridge-Freezer, 3.Washing Machine, 4.Dishwasher,\n",
-      "\n",
-      "['0', ' 1', ' 2', ' 3', ' 4', '\\n']\n",
-      "House 12\n",
-      "\n",
-      "153\n",
-      "0.Aggregate, 1.Fridge-Freezer, 2.Television Site(Lounge), 3.Microwave, 4.Kettle,\n",
-      "\n",
-      "['0', ' 1', ' 2', ' 3', ' 4', '\\n']\n",
-      "House 13\n",
-      "\n",
-      "158\n",
-      "0.Aggregate, 1.Television Site, 2.Unknown, 3.Washing Machine, 4.Dishwasher,\n",
-      "\n",
-      "['0', ' 1', ' 2', ' 3', ' 4', '\\n']\n",
-      "House 15\n",
-      "\n",
-      "173\n",
-      "0.Aggregate, 1.Fridge-Freezer, 2.Tumble Dryer, 3.Washing Machine, 4.Dishwasher,\n",
-      "\n",
-      "['0', ' 1', ' 2', ' 3', ' 4', '\\n']\n",
-      "House 16\n",
-      "\n",
-      "183\n",
-      "0.Aggregate, 1.Fridge-Freezer (1), 2.Fridge-Freezer (2), 3.Electric Heater (1)?,\n",
-      "\n",
-      "['0', ' 1', ' 2', ' 3', '\\n']\n",
-      "House 17\n",
-      "\n",
-      "193\n",
-      "0.Aggregate, 1.Freezer (Garage), 2.Fridge-Freezer, 3.Tumble Dryer (Garage), 4.Washing Machine,\n",
-      "\n",
-      "['0', ' 1', ' 2', ' 3', ' 4', '\\n']\n",
-      "House 18\n",
-      "\n",
-      "210\n",
-      "0.Aggregate, 1.Fridge(garage), 2.Freezer(garage), 3.Fridge-Freezer,\n",
-      "\n",
-      "['0', ' 1', ' 2', ' 3', '\\n']\n",
-      "House 19\n",
-      "\n",
-      "222\n",
-      "0.Aggregate, 1.Fridge & Freezer, 2.Washing Machine, 3.Television Site, 4.Microwave,\n",
-      "\n",
-      "['0', ' 1', ' 2', ' 3', ' 4', '\\n']\n",
-      "House 20\n",
-      "\n",
-      "230\n",
-      "0.Aggregate, 1.Fridge, 2.Freezer, 3.Tumble Dryer, 4.Washing Machine, 5.Dishwasher,\n",
-      "\n",
-      "['0', ' 1', ' 2', ' 3', ' 4', ' 5', '\\n']\n",
-      "House 21\n",
-      "\n",
-      "235\n",
-      "0.Aggregate, 1.Fridge-Freezer, 2.Tumble Dryer, 3.Washing Machine,\n",
-      "\n",
-      "['0', ' 1', ' 2', ' 3', '\\n']\n"
+      "20\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-91-14ab7a741eb3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mls\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mls\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m \u001b[1;31m#         house.append(s.strip('\\n'))\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;31m#             print(target)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 0"
      ]
     }
    ],
    "source": [
-    "indx, house = [], []\n",
+    "ls, keys, appliances = {} , [], []\n",
     "for i, s in enumerate(content):\n",
     "    if 'House' in s.capitalize():\n",
-    "        print(s)\n",
-    "        print(i)\n",
-    "        target = content[i+1]\n",
+    "        house = s.split()[1]\n",
+    "        for indx in range(1, 6):\n",
+    "            if content[i+indx] == '\\t!NOTES\\n':\n",
+    "                break\n",
+    "            else:\n",
+    "                target = [value.split('.') for value in [value for value in content[i+indx].split(',') if value != '\\n']]\n",
+    "                indx = [target_value[0] for target_value in target]\n",
+    "                values = [target_value[1] for target_value in target]\n",
+    "                keys.append([target_value[0] for target_value in target])\n",
+    "                appliances.append([target_value[1] for target_value in target])\n",
     "\n",
+    "        ls.update({house: {'appliances':  [item.split('\\n')[0] for sublist in appliances for item in sublist], 'keys': [item for sublist in keys for item in sublist]}})\n",
+    "\n",
+    "print(len(ls))\n",
+    "print(ls)\n",
     "#         house.append(s.strip('\\n'))\n",
-    "        print(target)\n",
-    "    \n",
-    "        target = target.split(',')\n",
+    "#             print(target)\n",
+    "#         print(target2)\n",
+    "#         print(target3)\n",
+    "#         print(target4)\n",
     "        \n",
-    "        values = [t[0] for t in [i.split('.') for i in target]]\n",
-    "        print(values)\n",
+    "        \n",
+    "#         house.append(s)\n",
+    "# #         print(house)\n",
+    "#         for value in target:\n",
+    "#             indx.append(value[0])\n",
+    "#             appliance.append(value[1])\n",
+    "# #         print(indx)\n",
+    "#         zipped = indx, appliance)\n",
+    "#         print(list(zipped))\n",
+    "            \n",
+    "            \n",
+    "    \n",
+    "#         target = target.split(',')\n",
+    "#         print(target)\n",
+    "#         print([i.split('.') for i in target])\n",
+    "        \n",
+    "#         a = [i.split('.') for i in target]\n",
+    "        \n",
+    "#         for item in a:\n",
+    "#             if item[0] != '\\n':\n",
+    "#                 print(item)\n",
+    "#                 print(item[0])\n",
+    "#                 print(item[1])\n",
+    "        \n",
+    "#         indx = [t[0] for t in [i.split('.') for i in target]]\n",
+    "#         values = [t[1] for t in [i.split('.') for i in target]]\n",
+    "#         print(values)\n",
     "#         zipped = zip(indx, house)\n",
     "#         zipped = list(zipped)\n",
     "        "
@@ -187,23 +116,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 52,
    "id": "3b504aba-aac3-4ead-9948-8859c37b994b",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'0.Aggregate'"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-52-44c19c54d254>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-52-44c19c54d254>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    dataframe = pd.DataFrame('House': house, )\u001b[0m\n\u001b[1;37m                                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
-    "values[0].split()"
+    "dataframe = pd.DataFrame('House': house, )"
    ]
   },
   {
