mapping needs modularization

--- a/loader.ipynb
+++ b/loader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "c81fe0b4-f5d7-4a9a-ab27-c2766cf3cfce",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "4ac5c19e-3806-44cd-8af5-85c40865b360",
    "metadata": {},
    "outputs": [
@@ -26,7 +26,7 @@
        "{'REFIT_DATA_FOLDER': '/data/external/refit/', 'REFIT_DATA_TYPE': '.csv'}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 9,
    "id": "a30a34e2-f99d-42b7-a403-bae941e49493",
    "metadata": {},
    "outputs": [],
@@ -109,20 +109,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 10,
    "id": "fbf93e03-b3d5-466f-aed0-48827166d5da",
    "metadata": {},
    "outputs": [],
    "source": [
     "data_dict = {\n",
-    "    'fetch_houses' : [1]\n",
+    "    'fetch_houses' : [1,3,4]\n",
     "#     'appliance': 'kettle'\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 11,
    "id": "4629c85d-1fe0-48af-9c87-d5a727f5bd3c",
    "metadata": {},
    "outputs": [
@@ -151,14 +151,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 12,
    "id": "908cd34c-a862-4fcb-8335-1b7100fb8fef",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Loading specified houses: [1]'"
+       "'Loading specified houses: [1, 3, 4]'"
       ]
      },
      "metadata": {},
@@ -168,18 +168,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 18 ms\n"
+      "Wall time: 55.6 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "f = ob._load_file_via_dask(csv_file_path=dataset_config['REFIT_DATA_FOLDER'], specifications=data_dict)"
+    "collective_dataset = ob._load_file_via_dask(csv_file_path=dataset_config['REFIT_DATA_FOLDER'], specifications=data_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 16,
    "id": "3d224a9d-b8a3-4fca-a74d-ef458f0e3c26",
    "metadata": {},
    "outputs": [
@@ -187,15 +187,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 12.1 s\n"
+      "Wall time: 12.9 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "d = f[0].compute().set_index('Time')\n",
-    "d = f[0].compute().set_index('Time')\n",
-    "d = f[0].compute().set_index('Time')"
+    "d1 = collective_dataset[0].compute().set_index('Time')\n",
+    "d3 = collective_dataset[1].compute().set_index('Time')\n",
+    "d4 = collective_dataset[2].compute().set_index('Time')\n",
+    "\n",
+    "# d1 = collective_dataset[0].compute()\n",
+    "# d3 = collective_dataset[1].compute()\n",
+    "# d4 = collective_dataset[2].compute()"
    ]
   },
   {
@@ -630,8 +634,338 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "ec92a994-8e8d-4500-9f61-34c3ff1e2e1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "nested_dict  = pickle.load( open(\"file.pkl\", \"rb\") )\n",
+    "d = [d1, d3, d4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1afc84f5-2602-4fc7-9333-908c5eca0e79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# nested_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "215ee332-8726-476a-8fe4-cfa192000ad5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for house in range(0, len(d)):\n",
+    "    print(house)\n",
+    "#     print(d)\n",
+    "    for i in range(1, len(nested_dict[str(house+1)]['appliances'])):\n",
+    "        d[house].rename({f'Appliance{i}': nested_dict[str(house+1)]['appliances'][i]}, axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "98dc2fff-21ad-4c15-a719-4a4f9295e433",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unix</th>\n",
+       "      <th>Aggregate</th>\n",
+       "      <th>Fridge</th>\n",
+       "      <th>Chest Freezer</th>\n",
+       "      <th>Upright Freezer</th>\n",
+       "      <th>Tumble Dryer</th>\n",
+       "      <th>Washing Machine</th>\n",
+       "      <th>Dishwasher</th>\n",
+       "      <th>Computer Site</th>\n",
+       "      <th>Television Site</th>\n",
+       "      <th>Electric Heater</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Time</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2013-10-09 13:06:17</th>\n",
+       "      <td>1381323977</td>\n",
+       "      <td>523</td>\n",
+       "      <td>74</td>\n",
+       "      <td>0</td>\n",
+       "      <td>69</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-10-09 13:06:31</th>\n",
+       "      <td>1381323991</td>\n",
+       "      <td>526</td>\n",
+       "      <td>75</td>\n",
+       "      <td>0</td>\n",
+       "      <td>69</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-10-09 13:06:46</th>\n",
+       "      <td>1381324006</td>\n",
+       "      <td>540</td>\n",
+       "      <td>74</td>\n",
+       "      <td>0</td>\n",
+       "      <td>68</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-10-09 13:07:01</th>\n",
+       "      <td>1381324021</td>\n",
+       "      <td>532</td>\n",
+       "      <td>74</td>\n",
+       "      <td>0</td>\n",
+       "      <td>68</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-10-09 13:07:15</th>\n",
+       "      <td>1381324035</td>\n",
+       "      <td>540</td>\n",
+       "      <td>74</td>\n",
+       "      <td>0</td>\n",
+       "      <td>69</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-07-10 11:56:05</th>\n",
+       "      <td>1436529365</td>\n",
+       "      <td>187</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-07-10 11:56:12</th>\n",
+       "      <td>1436529372</td>\n",
+       "      <td>185</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-07-10 11:56:18</th>\n",
+       "      <td>1436529378</td>\n",
+       "      <td>181</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-07-10 11:56:25</th>\n",
+       "      <td>1436529385</td>\n",
+       "      <td>186</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-07-10 11:56:32</th>\n",
+       "      <td>1436529392</td>\n",
+       "      <td>182</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6960008 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           Unix  Aggregate  Fridge  Chest Freezer  \\\n",
+       "Time                                                                \n",
+       "2013-10-09 13:06:17  1381323977        523      74              0   \n",
+       "2013-10-09 13:06:31  1381323991        526      75              0   \n",
+       "2013-10-09 13:06:46  1381324006        540      74              0   \n",
+       "2013-10-09 13:07:01  1381324021        532      74              0   \n",
+       "2013-10-09 13:07:15  1381324035        540      74              0   \n",
+       "...                         ...        ...     ...            ...   \n",
+       "2015-07-10 11:56:05  1436529365        187       0             45   \n",
+       "2015-07-10 11:56:12  1436529372        185       0             45   \n",
+       "2015-07-10 11:56:18  1436529378        181       0             45   \n",
+       "2015-07-10 11:56:25  1436529385        186       0             45   \n",
+       "2015-07-10 11:56:32  1436529392        182       0             45   \n",
+       "\n",
+       "                     Upright Freezer  Tumble Dryer  Washing Machine  \\\n",
+       "Time                                                                  \n",
+       "2013-10-09 13:06:17               69             0                0   \n",
+       "2013-10-09 13:06:31               69             0                0   \n",
+       "2013-10-09 13:06:46               68             0                0   \n",
+       "2013-10-09 13:07:01               68             0                0   \n",
+       "2013-10-09 13:07:15               69             0                0   \n",
+       "...                              ...           ...              ...   \n",
+       "2015-07-10 11:56:05                0             0                0   \n",
+       "2015-07-10 11:56:12                0             0                0   \n",
+       "2015-07-10 11:56:18                0             0                0   \n",
+       "2015-07-10 11:56:25                0             0                0   \n",
+       "2015-07-10 11:56:32                0             0                0   \n",
+       "\n",
+       "                     Dishwasher  Computer Site  Television Site  \\\n",
+       "Time                                                              \n",
+       "2013-10-09 13:06:17           0              0                0   \n",
+       "2013-10-09 13:06:31           0              0                0   \n",
+       "2013-10-09 13:06:46           0              0                0   \n",
+       "2013-10-09 13:07:01           0              0                0   \n",
+       "2013-10-09 13:07:15           0              0                0   \n",
+       "...                         ...            ...              ...   \n",
+       "2015-07-10 11:56:05           0              0                0   \n",
+       "2015-07-10 11:56:12           0              0                0   \n",
+       "2015-07-10 11:56:18           0              0                0   \n",
+       "2015-07-10 11:56:25           0              0                0   \n",
+       "2015-07-10 11:56:32           0              0                0   \n",
+       "\n",
+       "                     Electric Heater  \n",
+       "Time                                  \n",
+       "2013-10-09 13:06:17                1  \n",
+       "2013-10-09 13:06:31                1  \n",
+       "2013-10-09 13:06:46                1  \n",
+       "2013-10-09 13:07:01                1  \n",
+       "2013-10-09 13:07:15                1  \n",
+       "...                              ...  \n",
+       "2015-07-10 11:56:05                1  \n",
+       "2015-07-10 11:56:12                1  \n",
+       "2015-07-10 11:56:18                1  \n",
+       "2015-07-10 11:56:25                1  \n",
+       "2015-07-10 11:56:32                1  \n",
+       "\n",
+       "[6960008 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30ff5105-e0e9-4972-b2d5-90bfe10f7264",
    "metadata": {},
    "outputs": [],
    "source": []
