mapping in progress

--- a/parser.ipynb
+++ b/parser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c8dd7a2d-fcb8-4eee-97ea-e44573966422",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "8e4ec136-b74c-4f90-849b-23e0a925f90e",
    "metadata": {},
    "outputs": [
@@ -21,13 +21,13 @@
      "output_type": "stream",
      "text": [
       "240\n",
-      "Wall time: 9.23 ms\n"
+      "Wall time: 0 ns\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "with open('REFIT_Readme.txt') as f:\n",
+    "with open('data/refit/REFIT_Readme.txt') as f:\n",
     "    content = f.readlines()\n",
     "print(len(content))"
    ]
@@ -48,6 +48,11 @@
     }
    ],
    "source": [
+    "%%time\n",
+    "with open('REFIT_Readme.txt') as f:\n",
+    "    content = f.readlines()\n",
+    "print(len(content))\n",
+    "\n",
     "ls = {}\n",
     "for i, s in enumerate(content):\n",
     "    if 'House' in s.capitalize():\n",
